--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Pololu
 maintainer=Pololu <inbox@pololu.com>
 sentence=Pololu Raspberry Pi I2C Slave Arduino library
 paragraph=This library helps set up a Pololu A-Star 32U4 controller as an I2C slave for use with the Raspberry Pi.
-category=Device Control
+category=Communication
 url=https://github.com/pololu/pololu-rpi-slave-arduino-library
 architectures=avr
