updated readme and library.properties for 2.0.0
also license copyright year

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=PololuRPiSlave
-version=1.0.1
+version=2.0.0
 author=Pololu
 maintainer=Pololu <inbox@pololu.com>
 sentence=Pololu Raspberry Pi I2C Slave Arduino library
-paragraph=This library helps set up a Pololu A-Star 32U4 controller as an I2C slave for use with the Raspberry Pi.
+paragraph=This library helps set up a Pololu A-Star or Romi as an I2C slave for use with the Raspberry Pi.
 category=Communication
 url=https://github.com/pololu/pololu-rpi-slave-arduino-library
 architectures=avr
