--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
 - pip install -U platformio
 - platformio lib install 622 # http://platformio.org/lib/show/622/AStar32U4
 - platformio lib install 1481 # http://platformio.org/lib/show/1481/Romi32U4
+- platformio lib install 1535 # http://platformio.org/lib/show/1535/Balboa32U4
 
 env:
 - BOARD=leonardo
